[tool.poetry]
name = "mutable-print"
version = "1.0.1"
description = "Edit printed terminal text using ANSI escape codes."
authors = ["PcoiDev"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/PcoiDev/mutable-print"
repository = "https://github.com/PcoiDev/mutable-print"
keywords = ["python", "mutable", "custom", "print"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0"

[tool.poetry.urls]
Documentation = "https://github.com/PcoiDev/mutable-print/wiki/Intro"
Issues = "https://github.com/PcoiDev/mutable-print/issues"
Repository = "https://github.com/PcoiDev/mutable-print"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
